syntax = "proto3";

option go_package = "/proto";

import "google/protobuf/empty.proto";

service EmailService {
  rpc ComposeEmail(ComposeEmailRequest) returns (ComposeEmailResponse);
  rpc GetInbox(GetInboxRequest) returns (GetInboxResponse);
  rpc GetEmail(GetEmailRequest) returns (EmailMessage);
  rpc MoveToTrash(MoveToTrashRequest) returns (google.protobuf.Empty);
}

message ComposeEmailRequest {
  string sender = 1;
  repeated string to = 2;
  repeated string cc = 3;
  repeated string bcc = 4;
  string subject = 5;
  string body = 6;
  repeated string attachments = 7;
}

message ComposeEmailResponse {
  string message_id = 1;
  bool success = 2;
}

message GetInboxRequest {
  string user_email = 1;
}

message GetInboxResponse {
  repeated EmailMessage emails = 1;
}

message GetEmailRequest {
  string email_id = 1;
}

message EmailMessage {
  string id = 1;
  string sender = 2;
  string subject = 3;
  string body = 4;
  repeated string attachments = 5;
  string created_at = 6;
}

message MoveToTrashRequest {
  string email_id = 1;
}
